<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.jonaswestman.workout.MainActivity"
    android:background="#ffc98778">

    <Button
        android:id="@+id/button_monday"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="89dp"
        android:onClick="buttonPress"
        android:text="@string/button_monday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_tuesday"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button_monday"
        android:onClick="buttonPress"
        android:text="@string/button_tuesday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_wednesday"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button_tuesday"
        android:onClick="buttonPress"
        android:text="@string/button_wednesday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_thursday"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button_wednesday"
        android:onClick="buttonPress"
        android:text="@string/button_thursday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_friday"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/button_thursday"
        android:onClick="buttonPress"
        android:text="@string/button_friday"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Week"
        android:id="@+id/text_week"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textSize="50dp" />

</RelativeLayout>
